Cambio de titulo h1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Prueba Git</title>
 </head>
 <body>
-    <h1>Prueba</h1>
+    <h1>Prueba n1</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis sit iusto vel ut id quasi nulla distinctio consectetur possimus molestiae ullam ducimus, quos, cupiditate amet harum voluptatem sapiente neque est?</p>
 </body>
 </html>
